--- a/package.json
+++ b/package.json
@@ -1,33 +1,202 @@
 {
-  "name": "gptforresume",
+  "name": "resumeauto",
   "version": "1.0.0",
-  "description": "GPT service for resume auto generation.",
+  "description": "easy bid apply",
   "main": "index.js",
+  "dependencies": {
+    "accepts": "^2.0.0",
+    "agent-base": "^7.1.4",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "ast-types": "^0.13.4",
+    "b4a": "^1.6.7",
+    "bare-events": "^2.6.1",
+    "bare-fs": "^4.2.1",
+    "bare-os": "^3.6.2",
+    "bare-path": "^3.0.0",
+    "bare-stream": "^2.7.0",
+    "basic-ftp": "^5.0.5",
+    "body-parser": "^2.2.0",
+    "buffer-crc32": "^0.2.13",
+    "bytes": "^3.1.2",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "callsites": "^3.1.0",
+    "chromium-bidi": "^8.0.0",
+    "cliui": "^8.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "content-disposition": "^1.0.0",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.2",
+    "cookie-signature": "^1.2.2",
+    "core-util-is": "^1.0.3",
+    "cosmiconfig": "^9.0.0",
+    "data-uri-to-buffer": "^6.0.2",
+    "debug": "^4.4.1",
+    "degenerator": "^5.0.1",
+    "depd": "^2.0.0",
+    "devtools-protocol": "^0.0.1475386",
+    "docx": "^9.5.1",
+    "dotenv": "^17.2.1",
+    "dunder-proto": "^1.0.1",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^2.0.0",
+    "end-of-stream": "^1.4.5",
+    "entities": "^4.5.0",
+    "env-paths": "^2.2.1",
+    "error-ex": "^1.3.2",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "escalade": "^3.2.0",
+    "escape-html": "^1.0.3",
+    "escodegen": "^2.1.0",
+    "esprima": "^4.0.1",
+    "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "express": "^5.1.0",
+    "extract-zip": "^2.0.1",
+    "fast-fifo": "^1.3.2",
+    "fd-slicer": "^1.1.0",
+    "file-saver": "^2.0.5",
+    "finalhandler": "^2.1.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^2.0.0",
+    "function-bind": "^1.1.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "get-stream": "^5.2.0",
+    "get-uri": "^6.0.5",
+    "gopd": "^1.2.0",
+    "has-symbols": "^1.1.0",
+    "hash.js": "^1.1.7",
+    "hasown": "^2.0.2",
+    "http-errors": "^2.0.0",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "iconv-lite": "^0.6.3",
+    "immediate": "^3.0.6",
+    "import-fresh": "^3.3.1",
+    "inherits": "^2.0.4",
+    "ip-address": "^10.0.1",
+    "ipaddr.js": "^1.9.1",
+    "is-arrayish": "^0.2.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-promise": "^4.0.0",
+    "isarray": "^1.0.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "jszip": "^3.10.1",
+    "lie": "^3.3.0",
+    "lines-and-columns": "^1.2.4",
+    "linkify-it": "^5.0.0",
+    "lru-cache": "^7.18.3",
+    "markdown-it": "^14.1.0",
+    "math-intrinsics": "^1.1.0",
+    "mdurl": "^2.0.0",
+    "media-typer": "^1.1.0",
+    "merge-descriptors": "^2.0.0",
+    "mime-db": "^1.54.0",
+    "mime-types": "^3.0.1",
+    "minimalistic-assert": "^1.0.1",
+    "mitt": "^3.0.1",
+    "ms": "^2.1.3",
+    "nanoid": "^5.1.5",
+    "negotiator": "^1.0.0",
+    "netmask": "^2.0.2",
+    "object-inspect": "^1.13.4",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "openai": "^5.15.0",
+    "pac-proxy-agent": "^7.2.0",
+    "pac-resolver": "^7.0.1",
+    "pako": "^1.0.11",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^8.2.0",
+    "pend": "^1.2.0",
+    "picocolors": "^1.1.1",
+    "process-nextick-args": "^2.0.1",
+    "progress": "^2.0.3",
+    "proxy-addr": "^2.0.7",
+    "proxy-agent": "^6.5.0",
+    "proxy-from-env": "^1.1.0",
+    "pump": "^3.0.3",
+    "punycode.js": "^2.3.1",
+    "puppeteer": "^24.17.0",
+    "puppeteer-core": "^24.17.0",
+    "qs": "^6.14.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^3.0.0",
+    "readable-stream": "^2.3.8",
+    "require-directory": "^2.1.1",
+    "resolve-from": "^4.0.0",
+    "router": "^2.2.0",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "sax": "^1.4.1",
+    "semver": "^7.7.2",
+    "send": "^1.2.0",
+    "serve-static": "^2.2.0",
+    "setimmediate": "^1.0.5",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.8.7",
+    "socks-proxy-agent": "^8.0.5",
+    "source-map": "^0.6.1",
+    "statuses": "^2.0.2",
+    "streamx": "^2.22.1",
+    "string-width": "^4.2.3",
+    "string_decoder": "^1.1.1",
+    "strip-ansi": "^6.0.1",
+    "tar-fs": "^3.1.0",
+    "tar-stream": "^3.1.7",
+    "text-decoder": "^1.2.3",
+    "toidentifier": "^1.0.1",
+    "tslib": "^2.8.1",
+    "type-is": "^2.0.1",
+    "typed-query-selector": "^2.12.0",
+    "uc.micro": "^2.1.0",
+    "undici-types": "^7.10.0",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "vary": "^1.1.2",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.18.3",
+    "xml": "^1.0.1",
+    "xml-js": "^1.6.11",
+    "y18n": "^5.0.8",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yauzl": "^2.10.0",
+    "zod": "^3.25.76"
+  },
+  "devDependencies": {},
   "scripts": {
-    "start" : "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/John98410/bid-apply.git"
+    "url": "git+https://github.com/mckinezdev-afk/resumeauto.git"
   },
-  "keywords": [
-    "gpt",
-    "api",
-    "resume"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/John98410/bid-apply/issues"
+    "url": "https://github.com/mckinezdev-afk/resumeauto/issues"
   },
-  "homepage": "https://github.com/John98410/bid-apply#readme",
-  "dependencies": {
-    "@mohtasham/md-to-docx": "^2.2.1",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "markdown-it": "^14.1.0",
-    "openai": "^5.15.0",
-    "puppeteer": "^24.17.0"
-  }
+  "homepage": "https://github.com/mckinezdev-afk/resumeauto#readme"
 }
